--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,17 +46,12 @@
   </header>
 
   <main>
-
-
-
-
-
-
-
-
-
-
-
+    <h1 class="directoryTitle">Business Directory</h1>
+    <div class="buttons">
+      <button id="gridView"><img src="images/icons/grid-layout-button-dark.svg" alt="Grid View Layout Button"></button>
+      <button id="listView"><img src="images/icons/table-layout-button-dark.svg" alt="List View Layout Button"></button>
+    </div>
+    <div class="cards"></div>
   </main>
 
   <footer>
@@ -81,6 +76,7 @@
 
   <script src="js/dates.js"></script>
   <script src="js/hamburger.js"></script>
+  <script src="js/directory.js"></script>
 </body>
 
 </html>
