--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <title>Smokey Point Chamber of Commerce ~ Home</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content= "Homepage for the Smokey Point Chamber of Commerce, and home to all links and vital information pertaining to the organization." />
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/medium.css" />
-    <link rel="stylesheet" type="text/css" href="css/large.css" />
-  </head>
+<head>
+  <title>Smokey Point Chamber of Commerce ~ Home</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content= "Homepage for the Smokey Point Chamber of Commerce, and home to all links and vital information pertaining to the organization." />
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="css/medium.css" />
+  <link rel="stylesheet" type="text/css" href="css/large.css" />
+</head>
 
 <body>
   <header>
@@ -51,7 +51,7 @@
       <button id="gridView"><img src="images/icons/grid-layout-button-dark.svg" alt="Grid View Layout Button"></button>
       <button id="listView"><img src="images/icons/table-layout-button-dark.svg" alt="List View Layout Button"></button>
     </div>
-    <div class="cards"></div>
+    <div id="cards" class="cards"></div>
   </main>
 
   <footer>
@@ -77,6 +77,7 @@
   <script src="js/dates.js"></script>
   <script src="js/hamburger.js"></script>
   <script src="js/directory.js"></script>
+  <script src="js/viewchange.js"></script>
 </body>
 
 </html>
