--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><p>Lesson 07: <a href="lesson7/lazyload.html">Lazyload exercise</a></p></li>
       <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Demo</a> - <a href="Form-start/index.html">Form Demo</a></p></li>
       <li><p>Lesson 09: <a href="lesson9/prophets.html">Prophets - JSON</a></p></li>
-      <li><p>Lesson 10: <a href="error.html">Title</a></p></li>
+      <li><p>Lesson 10: <a href="lesson10/weather-api.html">Weather API practice</a></p></li>
       <li><p>Lesson 11: <a href="chamber/index.html">Chamber Site Full</a></p></li>
       <li><p>Student Presentation: <a href="presentation/dom.html">DOM</a></p></li>
     </ul>
