--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       <li><p>Lesson 03: <a href="lesson3/index.html">Chamber site plan</a></p></li>
       <li><p>Lesson 04: <a href="lesson4/index.html">Navigation exercise</a></p></li>
       <li><p>Lesson 05: <a href="lesson5/bom.html">BOM Practice</a></p></li>
-      <li><p>Lesson 06: <a href="error.html">Title</a></p></li>
       <li><p>Lesson 07: <a href="lesson7/lazyload.html">Lazyload exercise</a></p></li>
-      <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Demo</a> - <a href="Form-start/index.html">Form Demo</a></p></li>
+      <li><p>Lesson 08: <a href="lesson8/tablebuild.html">Table Demo</a> - <a href="lesson8/Form-start/index.html">Form Demo</a></p></li>
       <li><p>Lesson 09: <a href="lesson9/prophets.html">Prophets - JSON</a></p></li>
       <li><p>Lesson 10: <a href="lesson10/weather-api.html">Weather API practice</a></p></li>
       <li><p>Lesson 11: <a href="chamber/index.html">Chamber Site Full</a></p></li>
