--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,10 +53,10 @@
 
     <section id="news">
       <h2>-- News --</h2>
-      <h4 class="heading">test</h4>
-      <p>testing testing testing testing testing testing testing testing testing testing testing testing </p>
-      <h4 class="heading">Grand Opening of <em>Tims's</em> Restaurant</h4>
-      <p>Our community's own Tim Mcdonald is opening his own restaurant. Stop by to show your support!</p>
+      <h4 class="heading">Mirkwood Pub Paint Night</h4>
+      <p>Enjoy a few drinks, delicious food and socialize while creating a masterpiece!</p>
+      <h4 class="heading">Marysville Strawberry Festival</h4>
+      <p>Participate in our berry runs, carnivals, and tons of entertainment, and meet your local strawberry royalty!</p>
     </section>
 
     <section id="showcase">
@@ -147,7 +147,7 @@
       <div id="second-footer">
         <p>info@smokeyptcc.org</p>
         <p>+1 (360) 555-6789</p>
-        <a href="#">Location Map</a>
+        <p>Weather: <a href="https://openweathermap.org/">OpenWeatherMap.org</a></p>
       </div>
     </div>
 
@@ -159,7 +159,7 @@
   <script src="js/dates.js"></script>
   <script src="js/events.js"></script>
   <script src="js/hamburger.js"></script>
-  <script src="js/windchill.js"></script>
+  <script src="js/weather.js"></script>
 </body>
 
 </html>
