--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>Thank You For Joining!</title>
+    <title>Thank You!</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content= "We are grateful for your membership!" />
@@ -15,16 +15,17 @@
 <body>
   <header>
     <div id="nav-top">
-      <a href="index.html"><img id="logo" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
+      <a href="index.html"><img id="logo" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" /></a>
       <nav>
         <ul id="main-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
           <li class="large"><a href="directory.html">Directory</a></li>
+          <li class="large"><a href="contact.html">Contact Us</a></li>
           <li class="large">
-            <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-            <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+            <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+            <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
           </li>
           <li class="large" id="date"></li>
         </ul>
@@ -35,9 +36,10 @@
       <ul id="lower-nav" class="hidden">
         <li><a href="discover.html">Discover</a></li>
         <li><a href="directory.html">Directory</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li>
-          <a href="https://www.facebook.com" class="social"><img src="images/facebook.webp" alt="the link to facebook" /></a>
-          <a href="https://www.instagram.com" class="social"><img src="images/instagram.webp" alt="the link to instagram" /></a>
+          <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
+          <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
         </li>
       </ul>
       <p id="date2" class="hidden"></p>
@@ -48,7 +50,7 @@
   <main id="thankyou">
 
     <div>
-      <h1>Thank you for joining us!</h1>
+      <h1>Thank you!</h1>
       <a href="index.html">Return Home</a>
     </div>
 
@@ -56,7 +58,7 @@
 
   <footer>
     <div id="main-footer">
-      <img id="logo-footer" src="images/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
+      <img id="logo-footer" src="images/icons/smokeypoint_logo.webp" alt="Logo for the chamber of commerce" />
       <div id="first-footer">
         <h3>Smokey Point Chamber of Commerce</h3>
         <p>123 State Ave NW</p>
