--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,7 @@
           <li><a href="join.html">Join Now!</a></li>
           <li class="large"><a href="discover.html">Discover</a></li>
           <li class="large"><a href="directory.html">Directory</a></li>
+          <li class="large"><a href="contact.html">Contact Us</a></li>
           <li class="large">
             <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
             <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
@@ -35,6 +36,7 @@
       <ul id="lower-nav" class="hidden">
         <li><a href="discover.html">Discover</a></li>
         <li><a href="directory.html">Directory</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         <li>
           <a href="https://www.facebook.com" class="social"><img src="images/icons/facebook.webp" alt="the link to facebook" /></a>
           <a href="https://www.instagram.com" class="social"><img src="images/icons/instagram.webp" alt="the link to instagram" /></a>
