--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
   <main id="index">
     <section id="banner">
       <h1 id="main-heading">Welcome to Smokey Point</h1>
-      <button class="join" id="join"><a href="join.html">Join Now!</a></button>
+      <a href="join.html" class="join button" id="join">Join Now!</a>
     </section>
 
     <section id="news">
@@ -85,34 +85,34 @@
       <h3>See What's Happening!</h3>
 
       <div id="event1">
-        <h6 id="eventdate1"></h6>
+        <h6 id="eventdate1">1 Jan</h6>
         <p>Chamber Meeting - 7pm</p>
       </div>
       <div id="event2">
-        <h6 id="eventdate2"></h6>
+        <h6 id="eventdate2">2 Jan</h6>
         <p>Open House - 6pm</p>
       </div>
       <div id="event3">
-        <h6 id="eventdate3"></h6>
+        <h6 id="eventdate3">7 Jan</h6>
         <p>Chamber Meeting - 7pm</p>
       </div>
       <div id="event4">
-        <h6 id="eventdate4"></h6>
+        <h6 id="eventdate4">9 Jan</h6>
         <p>Business Lunch - 11am</p>
       </div>
       <div id="event5">
-        <h6 id="eventdate5"></h6>
+        <h6 id="eventdate5">11 Jan</h6>
         <p><em>Tim's</em> Grand Opening</p>
       </div>
       <div id="event6">
-        <h6 id="eventdate6"></h6>
+        <h6 id="eventdate6">15 Jan</h6>
         <p>Chamber Meeting - 7pm</p>
       </div>
 
     </section>
     
     <section id="join-now">
-      <button class="join" id="join2"><a href="join.html">Join Us Now!</a></button>
+      <a href="join.html" class="join" id="join2">Join Us Now!</a>
     </section>
 
     <section id="weather">
@@ -124,7 +124,7 @@
         <span id="temp_label">°F</span>
       </div>
 
-      <h4 id="conditions"></h4>
+      <h4 id="conditions">cloudy</h4>
 
       <div class="label">
         <p>Wind Speed:</p>
