finished site plan

--- a/temple-site/site-plan.html
+++ b/temple-site/site-plan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Site Plan - Temple Inn and Suites</title>
+  <title>Site Plan - Temple Inn & Suites</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +12,14 @@
 
 <body>
 
-  <h1>Site Plan - Temple Inn and Suites</h1>
+  <h1>Site Plan - Temple Inn & Suites</h1>
   <h2>Ryan Brower</h2>
 
   <h3>Site Purpose</h3>
-  <p></p>
+  <p>The Temple Inn & Suites site is for anyone who is interested in staying at the Suites sometime in the future. The site will contain information about reservations, including when openings are available. There will also be information about the amenities and benefits that come with using this hotel. Visitors will want to know how they can accomodate children during visits to the temple and other concerns, that will be answered with the information on the site.</p>
 
   <h3>Target Audience</h3>
-  <p></p>
+  <p>Visitors of the site will mostly be members of the Church of Jesus Christ of Latter-Day Saints that don't live close to a temple of their own. They will likely be head of households or leaders of youth or adult groups, meaning that people are more likely to reserve for many people at once. They will want to know about amenities and available days to reserve.</p>
 
   <h3>Site Map</h3>
   <div class="sitemap">
@@ -66,20 +66,43 @@
   </div>
 
   <h3>Color Scheme</h3>
-  <div class="color" id="color1">color 1</div>
-  <div class="color" id="color2">color 2</div>
-  <div class="color" id="color3">color 3</div>
-  <div class="color" id="color4">color 4</div>
+  <div class="color" id="color1">#ffac81</div>
+  <div class="color" id="color2">#ff928b</div>
+  <div class="color" id="color3">#fec3a6</div>
+  <div class="color" id="color4">#efe9ae</div>
+  <div class="color" id="color5">#cdeac0</div>
 
-  <h3>Typography</h3>
-  <h5>Heading Text:</h5>
-  <p></p>
-  <h5>Paragraph Text:</h5>
-  <p></p>
+  <div class="fonts">
+    <h3>Typography</h3>
+    <h5>Heading Text: Playfair Display</h5>
+    <p>I chose Playfair Display because it looks formal and I think it matches the fit of a temple hotel. It will be used on all header elements throughout the site.</p>
+    <h5>Paragraph Text: Noto Sans</h5>
+    <p>I chose Noto Sans because it is clean and professional. This will be used in all p, a, and span elements throughout the site.</p>
+  </div>
 
   <h3>Wireframe Sketches</h3>
-
-
+  <div id="wireframes">
+    <div class="small">
+      <h5>Small View</h5>
+      <img src="images/site-plan/Small 1.png" alt="small 1">
+      <img src="images/site-plan/Small 2.png" alt="small 2">
+      <img src="images/site-plan/Small 3.png" alt="small 3">
+      <img src="images/site-plan/Small 4.png" alt="small 4">
+      <img src="images/site-plan/Small 5.png" alt="small 5">
+    </div>
+    <div class="med">
+      <h5>Medium View</h5>
+      <img src="images/site-plan/Medium 1.png" alt="Medium 1" class="med">
+      <img src="images/site-plan/Medium 2.png" alt="Medium 2" class="med">
+      <img src="images/site-plan/Medium 3.png" alt="Medium 3" class="med">
+    </div>
+    <div class="large">
+      <h5>Large View</h5>
+      <img src="images/site-plan/Large 1.png" alt="Large 1" class="large">
+      <img src="images/site-plan/Large 2.png" alt="Large 2" class="large">
+      <img src="images/site-plan/Large 3.png" alt="Large 3" class="large">
+    </div>
+  </div>
 </body>
 
 </html>
