--- a/temple-site/site-plan.html
+++ b/temple-site/site-plan.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content= "Site plan for the temple inn and suites - done for the class WDD230" />
-  <link rel="stylesheet" href="css/site-plan.css">
+  <link rel="stylesheet" href="css/site-plan.css" type="text/css">
 </head>
 
 <body>
