more temple info

--- a/temple-site/index.html
+++ b/temple-site/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="header">
-      <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+      <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
       <div>
         <h2>Temple</h2>
         <h3>Inn & Suites</h3>
@@ -110,12 +110,12 @@
         <h3 class="social1">Find us on social media</h3>
         <a href="https://www.facebook.com" class="social2">
           <h4>Facebook</h4>
-          <img src="images/icons/fb-logo.png" alt="Facebook logo">
+          <img src="images/icons/fb-logo.webp" alt="Facebook logo">
           <p>www.facebook.com/templeinn</p>
         </a>
         <a href="https://www.linkedin.com" class="social3">
           <h4>Linkedin</h4>
-          <img src="images/icons/lk-logo.png" alt="Linkedin logo">
+          <img src="images/icons/lk-logo.webp" alt="Linkedin logo">
           <p>www.linkedin.com/templeinn</p>
         </a>
       </section>
@@ -125,7 +125,7 @@
     <section class="contact thin">
       <div>
         <div class="logo">
-          <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+          <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
           <div>
             <h2>Temple</h2>
             <h3>Inn & Suites</h3>
@@ -156,6 +156,7 @@
     <p>&copy;2022 Temple Inn & Suites</p>
     <p>Last visited: <em><span id="last-visited"></span></em></p>
     <p>Last Modified: <em><span id="last-modified"></span></em></p>
+    <a href="attributions.html">Attributions</a>
   </footer>
 
   <script src="js/weather.js"></script>
