--- a/temple-site/reservation.html
+++ b/temple-site/reservation.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="header">
-      <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+      <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
       <div>
         <h2>Temple</h2>
         <h3>Inn & Suites</h3>
@@ -66,12 +66,12 @@
             <label>
               <span>Start Date:</span>
               <input id="st-date" type="date" name="st_date" required>
-              <img class="dates-check" src="images/icons/check.png" alt="check mark">
+              <img class="dates-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>End Date:</span>
               <input id="end-date" type="date" name="end_date" required>
-              <img class="dates-check" src="images/icons/check.png" alt="check mark">
+              <img class="dates-check" src="images/icons/check.webp" alt="check mark">
             </label>
           </div>
 
@@ -81,7 +81,7 @@
           <div class="party">
             <label>
               <input id="num-rooms" class="party-input" type="number" name="party_size" min="1" max="15" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <div class="radio">
               <label>
@@ -102,27 +102,27 @@
             <label>
               <span>First name:</span>
               <input type="text" name="fname" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>Last name:</span>
               <input type="text" name="lname" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>Email:</span>
               <input type="email" name="email" placeholder="someone@mail.com" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>Phone:</span>
               <input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="234-555-9876" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>Country/State:</span>
               <input type="text" name="origin" required>
-              <img class="party-check" src="images/icons/check.png" alt="check mark">
+              <img class="party-check" src="images/icons/check.webp" alt="check mark">
             </label>
             <label>
               <span>Special Accomodations:</span>
@@ -142,7 +142,7 @@
     <section class="contact thin">
       <div>
         <div class="logo">
-          <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+          <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
           <div>
             <h2>Temple</h2>
             <h3>Inn & Suites</h3>
@@ -173,6 +173,7 @@
     <p>&copy;2022 Temple Inn & Suites</p>
     <p>Last visited: <em><span id="last-visited"></span></em></p>
     <p>Last Modified: <em><span id="last-modified"></span></em></p>
+    <a href="attributions.html">Attributions</a>
   </footer>
 
   <script src="js/form-fill.js"></script>
