--- a/temple-site/thankyou.html
+++ b/temple-site/thankyou.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="header">
-      <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+      <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
       <div>
         <h2>Temple</h2>
         <h3>Inn & Suites</h3>
@@ -39,7 +39,7 @@
     <section class="contact thin">
       <div>
         <div class="logo">
-          <img class="logo-box" src="images/icons/temple_logo.png" alt="Image logo" />
+          <img class="logo-box" src="images/icons/temple_logo.webp" alt="Image logo" />
           <div>
             <h2>Temple</h2>
             <h3>Inn & Suites</h3>
@@ -70,6 +70,7 @@
     <p>&copy;2022 Temple Inn & Suites</p>
     <p>Last visited: <em><span id="last-visited"></span></em></p>
     <p>Last Modified: <em><span id="last-modified"></span></em></p>
+    <a href="attributions.html">Attributions</a>
   </footer>
 
   <script src="js/visits.js"></script>
